# testvr

./: CMakeLists.txt  FS_checker_texture.fsh  FS_cube_texture.fsh  FS_lit_checker.fsh  FS_lit_cube.fsh  FS_lit_specular_cube.fsh  FS_lit_texture.fsh  FS_lit_texture_cube.fsh  FS_plan.fsh  FS_plan_texture.fsh  FS_skybox_texture.fsh  TP4.pro  TP5.pro  VRResources.qrc  VS_cube_texture.vsh  VS_lit_cube.vsh  VS_lit_texture.vsh  VS_lit_texture_cube.vsh  VS_simple.vsh  VS_simple_texture.vsh  VS_simpler.vsh  VS_skybox_texture.vsh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rvbody.cpp  rvbody.h  rvbounce.cpp  rvbounce.h  rvcamera.cpp  rvcamera.h  rvcube.cpp  rvcurve.cpp  rvdice.cpp  rvdice.h  rvlight.cpp  rvlight.h  rvplane.cpp  rvplane.h  (+66 more)
.qtcreator/: TP4.pro.user.bad9c0a
